[gd_scene load_steps=7 format=3 uid="uid://drn8t5132w352"]

[ext_resource type="Script" uid="uid://cll2emvic6l63" path="res://material_maker/panels/reference/reference_panel.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cqalnln5sq2ff" path="res://material_maker/panels/reference/color_slot.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://jyqnc0l3oaeu" path="res://material_maker/panels/reference/gradient_slot.tscn" id="3"]

[sub_resource type="Shader" id="1"]
code = "shader_type canvas_item;

uniform sampler2D image : hint_default_transparent;
uniform vec2 canvas_size;
uniform vec2 image_size;
uniform float scale;
uniform vec2 center = vec2(0.5);
uniform vec4 bg_color : source_color;

void fragment() {
	vec2 ratio = canvas_size/image_size;
	vec2 uv = center+(UV-0.5)*scale*ratio/min(ratio.x, ratio.y);
	COLOR = mix(vec4(0.0), texture(image, uv), step(length(uv-clamp(uv, vec2(0.0), vec2(1.0))), 0.0001));
}"

[sub_resource type="ShaderMaterial" id="3"]
shader = SubResource("1")
shader_parameter/canvas_size = Vector2(200, 200)
shader_parameter/image_size = Vector2(256, 256)
shader_parameter/scale = 2.02
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/bg_color = Color(0, 0, 0, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_82qg5"]
resource_local_to_scene = false
allow_unpress = true

[node name="ReferencePanel" type="Panel"]
clip_children = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 171.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MM_PanelBackground"
script = ExtResource("1")

[node name="Empty" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Empty"]
modulate = Color(1, 1, 1, 0.519)
layout_mode = 2
text = "Drag and drop reference image"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Image" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="MenuBar" type="ScrollContainer" parent="."]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 54.0
grow_horizontal = 2
theme_type_variation = &"MM_PanelMenuBackground"
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBox" type="HFlowContainer" parent="MenuBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainMenu" type="PanelContainer" parent="MenuBar/HBox"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"MM_PanelMenuBar"

[node name="HBox" type="HBoxContainer" parent="MenuBar/HBox/MainMenu"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuBar"

[node name="AddImageButton" type="Button" parent="MenuBar/HBox/MainMenu/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Add Image"
icon_alignment = 1

[node name="RemoveImageButton" type="Button" parent="MenuBar/HBox/MainMenu/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Remove Image"
icon_alignment = 1

[node name="NavigationMenu" type="PanelContainer" parent="MenuBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"MM_PanelMenuBar"

[node name="HBox" type="HBoxContainer" parent="MenuBar/HBox/NavigationMenu"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuBar"

[node name="PrevImageButton" type="Button" parent="MenuBar/HBox/NavigationMenu/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Previous"
icon_alignment = 1

[node name="ImageIndexLabel" type="Label" parent="MenuBar/HBox/NavigationMenu/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MM_NodeFloatEdit"

[node name="NextImageButton" type="Button" parent="MenuBar/HBox/NavigationMenu/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Next"
icon_alignment = 1

[node name="PickerMenu" type="PanelContainer" parent="MenuBar/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"MM_PanelMenuBar"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuBar/HBox/PickerMenu"]
layout_mode = 2

[node name="ColorSlots" type="HBoxContainer" parent="MenuBar/HBox/PickerMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MM_PanelMenuBar"

[node name="ColorSlot1" parent="MenuBar/HBox/PickerMenu/HBoxContainer/ColorSlots" instance=ExtResource("2")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Pick Color"
button_group = SubResource("ButtonGroup_82qg5")

[node name="ColorSlot2" parent="MenuBar/HBox/PickerMenu/HBoxContainer/ColorSlots" instance=ExtResource("2")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Pick Color"
button_group = SubResource("ButtonGroup_82qg5")

[node name="ColorSlot3" parent="MenuBar/HBox/PickerMenu/HBoxContainer/ColorSlots" instance=ExtResource("2")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Pick Color"
button_group = SubResource("ButtonGroup_82qg5")

[node name="ColorSlot4" parent="MenuBar/HBox/PickerMenu/HBoxContainer/ColorSlots" instance=ExtResource("2")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Pick Color"
button_group = SubResource("ButtonGroup_82qg5")

[node name="ColorSlot5" parent="MenuBar/HBox/PickerMenu/HBoxContainer/ColorSlots" instance=ExtResource("2")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Pick Color"
button_group = SubResource("ButtonGroup_82qg5")

[node name="VSeparator" type="VSeparator" parent="MenuBar/HBox/PickerMenu/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"MM_PanelMenuSeparator"

[node name="GradientSlot" parent="MenuBar/HBox/PickerMenu/HBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
tooltip_text = "Pick Gradient"
button_group = SubResource("ButtonGroup_82qg5")

[connection signal="gui_input" from="Image" to="." method="_on_image_gui_input"]
[connection signal="resized" from="Image" to="." method="_on_image_resized"]
[connection signal="pressed" from="MenuBar/HBox/MainMenu/HBox/AddImageButton" to="." method="_on_add_image_button_pressed"]
[connection signal="pressed" from="MenuBar/HBox/MainMenu/HBox/RemoveImageButton" to="." method="_on_remove_image_button_pressed"]
[connection signal="pressed" from="MenuBar/HBox/NavigationMenu/HBox/PrevImageButton" to="." method="_on_prev_image_button_pressed"]
[connection signal="pressed" from="MenuBar/HBox/NavigationMenu/HBox/NextImageButton" to="." method="_on_next_image_button_pressed"]
